Add WriteBitInRegister()
